# phi47-superpowers

./: .gitignore  .phi47.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  write_benchmark.py
.github/workflows/: ci.yml
benchmarks/: run_benchmarks.py
benchmarks/results/: benchmark_results.json
docs/: QUICKSTART.md
paper/: phi47_paper_v1.docx  phi47_paper_v1.md  phi47_paper_zenodo_v1.docx  phi47_paper_zenodo_v1.md
src/phi47/: __init__.py  __main__.py
src/phi47/cli/: __init__.py  main.py
src/phi47/core/: phi_calculator.py
src/phi47/integration/: __init__.py  resonance_pipeline.py
src/phi47/linter/: phi_linter.py
src/phi47/wrapper/: __init__.py  llm_wrapper.py
tests/: conftest.py
tests/unit/: test_linter.py  test_phi_calculator.py
vscode-extension/: .vscodeignore  CHANGELOG.md  EXTENSION_README.md  LICENSE  PUBLISHING.md  README.md  extension-package.json  extension.ts  package-lock.json  package.json  phi47-superpowers-0.1.1.vsix  phi47-superpowers-0.1.2.vsix  phi47-superpowers-0.1.3.vsix  tsconfig.json
vscode-extension/src/: extension.ts
